workloads.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        tier: frontend
    spec:
      nodeSelector:
        node: "A"
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        tier: backend
    spec:
      nodeSelector:
        node: "B"
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: my-sql
  labels:
    app: my-sql
    tier: db
spec:
  nodeSelector:
    node: "C"
  containers:
    - name: mysql
      image: mysql:8.0
      ports:
        - containerPort: 3306
