services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport
  labels:
    app: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 8080
      targetPort: 80  

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: my-sql
spec:
  type: ClusterIP
  selector:
    app: my-sql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
